--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="">
+    app:startDestination="@id/login_fragment">
 
-<!--    <fragment-->
-<!--        android:id="@+id/login_fragment"-->
-<!--        android:name="LoginFragment"-->
+    <fragment
+        android:id="@+id/login_fragment"
+        android:name="com.example.presentation.view.LoginFragment"
+        tools:layout="@layout/fragment_login"
+        android:label="LoginFragment"/>
 </navigation>
