--- a/presentation/src/main/res/navigation/nav_graph.xml
+++ b/presentation/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+
+<navigation
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
@@ -9,5 +11,36 @@
         android:id="@+id/login_fragment"
         android:name="com.example.presentation.view.LoginFragment"
         tools:layout="@layout/fragment_login"
-        android:label="LoginFragment"/>
+        android:label="LoginFragment">
+        <action
+            android:id="@+id/action_login_fragment_to_product_list_fragment"
+            app:destination="@id/product_list_fragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/product_list_fragment"
+        android:name="com.example.presentation.view.ProductListFragment"
+        tools:layout="@layout/fragment_viewpager"
+        android:label="ProductListFragment">
+        <action
+            android:id="@+id/action_product_list_fragment_to_product_detail_fragment"
+            app:destination="@id/product_detail_fragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/product_detail_fragment"
+        android:name="com.example.presentation.view.ProductDetailFragment"
+        tools:layout="@layout/fragment_viewpager"
+        android:label="ProductDetailFragment">
+        <action
+            android:id="@+id/action_product_detail_fragment_to_image_pager_fragment"
+            app:destination="@id/image_pager_fragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/image_pager_fragment"
+        android:name="com.example.presentation.view.ImagesPagerFragment"
+        tools:layout="@layout/fragment_viewpager"
+        android:label="ImagesPagerFragment"/>
+
 </navigation>
