--- a/presentation/src/main/res/layout/product_list_layout.xml
+++ b/presentation/src/main/res/layout/product_list_layout.xml
@@ -7,16 +7,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.presentation.view.MainActivity">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Title" />
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/bAddElement"
         android:layout_width="wrap_content"
@@ -34,6 +24,6 @@
         app:layout_constraintBottom_toTopOf="@id/bAddElement"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
