--- a/presentation/src/main/res/xml/scene_detail.xml
+++ b/presentation/src/main/res/xml/scene_detail.xml
@@ -35,8 +35,32 @@
                     />
             </KeyAttribute>
             <KeyAttribute
+                app:framePosition="85"
+                app:motionTarget="@id/rlProductAuxContent">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="0"
+                    />
+            </KeyAttribute>
+            <KeyAttribute
                 app:framePosition="100"
                 app:motionTarget="@id/rlProductAuxContent">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="1"
+                    />
+            </KeyAttribute>
+            <KeyAttribute
+                app:framePosition="0"
+                app:motionTarget="@id/tvOpenGallery">
+                <CustomAttribute
+                    app:attributeName="alpha"
+                    app:customFloatValue="0"
+                    />
+            </KeyAttribute>
+            <KeyAttribute
+                app:framePosition="100"
+                app:motionTarget="@id/tvOpenGallery">
                 <CustomAttribute
                     app:attributeName="alpha"
                     app:customFloatValue="1"
@@ -181,6 +205,22 @@
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTitleDetail"/>
+        <Constraint
+            android:id="@+id/tvOpenGallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="80dp"/>
+        <Constraint
+            android:id="@+id/ivProductHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            motion:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:translationY="-100dp"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/endTitle">
@@ -209,6 +249,21 @@
             motion:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="25dp"
             app:layout_constraintTop_toBottomOf="@id/tvTitleDetail"/>
+        <Constraint
+            android:id="@+id/tvOpenGallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            motion:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="80dp"/>
+        <Constraint
+            android:id="@+id/ivProductHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            motion:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 
 </MotionScene>
